# Repodoctor

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 763ae5a47e25_create_initial_tables.py  a1b2c3d4e5f6_add_repo_url.py  b2c3d4e5f6a7_add_schedules_webhooks_indexes.py
backend/app/: config.py  logging_config.py  main.py
backend/app/ai/: provider.py  remediation.py
backend/app/api/: compare_router.py  export_router.py  remediation_router.py  report_service.py  reports_router.py  router.py  schedules_router.py  schemas.py  webhooks_router.py
backend/app/auth/: dependencies.py  router.py  service.py
backend/app/cache/: service.py
backend/app/core/: database.py  rate_limit.py  security.py
backend/app/export/: csv_export.py  html.py  markdown.py  pdf_export.py  sarif.py
backend/app/github/: client.py  schemas.py  service.py
backend/app/models/: models.py
backend/app/repositories/: report_repo.py  schedule_repo.py  webhook_repo.py
backend/app/scoring/: cicd.py  documentation.py  git_hygiene.py  licensing.py  pipeline.py  recommendations.py  rule.py  security.py  testing.py
backend/scripts/: validate_scoring.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_api.py  test_compare.py  test_deduplication.py  test_error_handling.py  test_exports.py  test_history_trends.py  test_remediation.py  test_schedules.py  test_schema_sync.py  test_structured_rules.py  test_summary.py  test_url_generation.py  test_webhooks.py
backend/tests/auth/: test_auth.py
backend/tests/cache/: test_cache.py
frontend/: index.html  (+5 more)
(+31 files in other folders)
